--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,8 @@ name = "falcon"
 version = "0.0.1"
 authors = [ "Alex Eubanks <endeavor@rainbowsandpwnies.com>" ]
 
+
 [profile.dev]
-opt-level=1
-codegen-units = 8
-
-
-[profile.release]
 codegen-units = 8
 
 
@@ -16,6 +12,7 @@ codegen-units = 8
 base64 = "0.5"
 capstone_rust = "0.2"
 error-chain = "0.10"
+log = "0.3"
 
 
 [[bin]]
