--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,11 @@ goblin = "0.0.9"
 ketos = "0.9"
 ketos_derive = "0.1"
 log = "0.3"
-serde = "1.0"
-serde_derive = "1.0"
+#serde = "1.0.8"
+serde_derive = "1.0.8"
 serde_json = "1.0"
 
+serde = {version = "1.0.8", features = ["rc"]}
 
 [lib]
 name = "falcon"
