--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+dist: xenial
+
 language: rust
+
+rust:
+  - stable
+
+install:
+  - wget https://github.com/aquynh/capstone/archive/3.0.4.tar.gz
+  - tar -xzvf 3.0.4.tar.gz
+  - pushd capstone-3.0.4/ && make && sudo make install && popd
+
 rust:
   - stable
