--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ language: rust
 rust:
   - stable
 
+before_install:
+  - wget -O - http://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+  - sudo apt-add-repository "deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.9 main"
+  - sudo apt-get -qq update
+  - sudo apt-get install -y llvm-3.9-dev libclang-3.9-dev clang-3.9
+
 install:
   - wget https://github.com/aquynh/capstone/archive/3.0.4.tar.gz
   - tar -xzvf 3.0.4.tar.gz
