--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,10 @@
-dist: trusty
 sudo: required
-language: rust
 
-rust:
-  - stable
-
-env:
-  - LIBCLANG_PATH=/usr/lib/x86_64-linux-gnu/
+services:
+  - docker
 
 before_install:
-  - wget -O - http://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-  - sudo apt-add-repository "deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.9 main"
-  - sudo apt-get update -qq
-  - sudo apt-get install -y llvm-3.9-dev libclang-3.9-dev libclang1-3.9 clang-3.9
-  - sudo ln -s /usr/lib/x86_64-linux-gnu/libclang-3.9.so.1 /usr/lib/x86_64-linux-gnu/libclang.so
+  - docker build -t falcon .
 
-install:
-  - wget https://github.com/aquynh/capstone/archive/3.0.4.tar.gz
-  - tar -xzvf 3.0.4.tar.gz
-  - pushd capstone-3.0.4/ && make && sudo make install && popd
-
-rust:
-  - stable
+script:
+  - docker run --rm -ti falcon /bin/bash -c "source ~/.profile; cd /falcon; cargo test"
