--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,18 +10,21 @@ readme = "README.md"
 [dependencies]
 base64 = "0.9"
 bitflags = "1.0"
+byteorder = "1.2"
 falcon_capstone = "0.2.1"
 error-chain = "0.11"
 goblin = "0.0.14"
 log = "0.4"
+num-bigint = {git="https://github.com/rust-num/num-bigint", commit="007da2add906db1f1d0b184601d1fc5046cf2c61", features = ["serde"]}
+num-traits = "0.2.1"
 serde_derive = "1.0"
 serde_json = "1.0"
-
-serde = {version = "1.0.8", features = ["rc"]}
+serde = {version = "1.0", features=["rc"]}
 
 [features]
 default = []
 thread_safe = []
+
 
 [lib]
 name = "falcon"
