Port codebase to Rust 2018 edition.
Most of the changes were changing `use` statements and some variables
conflicting with keywords.

Signed-off-by: Jean Pierre Dudey <jeandudey@hotmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ repository = "https://github.com/falconre/falcon"
 description = "A Binary Analysis Framework in Rust"
 license = "Apache-2.0"
 readme = "README.md"
+edition = "2018"
 
 [dependencies]
 base64 = "0.9"
