--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde_json = "1.0"
 serde = {version="1.0", features=["rc"]}
 
 [features]
-default = []
+default = ["capstone4"]
 thread_safe = []
 capstone4 = ["falcon_capstone/capstone4"]
 
