--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ num-traits = "0.2"
 serde_derive = "1.0"
 serde_json = "1.0"
 serde = {version="1.0", features=["rc"]}
+rustc-hash = "1.1.0"
 
 
 [features]
