--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -1,11 +1,12 @@
 FROM debian:stretch 
  
+COPY llvm-snapshot.gpg.key /
 RUN apt-get update && \ 
     apt-get -y dist-upgrade && \ 
     apt-get -y install curl gnupg2 apt-transport-https && \
     echo "deb http://apt.llvm.org/stretch/ llvm-toolchain-stretch-4.0 main" >> /etc/apt/sources.list && \ 
     echo "deb-src http://apt.llvm.org/stretch/ llvm-toolchain-stretch-4.0 main" >> /etc/apt/sources.list && \ 
-    curl http://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - && \ 
+    cat /llvm-snapshot.gpg.key | apt-key add - && \
     apt-get update && \ 
     apt-get -y install build-essential \ 
                        clang-4.0 \ 
