--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 [dependencies]
 base64 = "0.12"
 bitflags = "1.2"
-falcon_capstone = "0.4.0"
+falcon_capstone = "0.4.1"
 error-chain = "0.12"
 goblin = "0.2"
 log = "0.4"
@@ -22,7 +22,7 @@ serde_json = "1.0"
 serde = {version="1.0", features=["rc"]}
 
 [features]
-default = []
+default = ["capstone4"]
 thread_safe = []
 capstone4 = ["falcon_capstone/capstone4"]
 
