--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,12 @@ falcon_capstone = "0.4.1"
 error-chain = "0.12"
 goblin = "0.2"
 log = "0.4"
-num-bigint = {version="0.2", features=["serde"]}
+num-bigint = {version="0.3", features=["serde"]}
 num-traits = "0.2"
 serde_derive = "1.0"
 serde_json = "1.0"
 serde = {version="1.0", features=["rc"]}
+rustc-hash = "1.1.0"
 
 
 [features]
