Mirror feature addition to falcon_capstone

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ rustc-hash = "1.1.0"
 default = ["capstone4"]
 thread_safe = []
 capstone4 = ["falcon_capstone/capstone4"]
+static = ["falcon_capstone/static"]
 
 [lib]
 name = "falcon"
