--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "falcon"
-version = "0.5.0"
-authors = [ "Alex Eubanks <endeavor@rainbowsandpwnies.com>" ]
+version = "0.5.1"
+authors = [ "endeavor <endeavor@rainbowsandpwnies.com>" ]
 repository = "https://github.com/falconre/falcon"
 description = "A Binary Analysis Framework in Rust"
 license = "Apache-2.0"
