il: Hide arithmetic shift right expression behind a feature flag
Expression::Ashr is only available if feature `il-expression-ashr`
is enabled. If the feature is disabled, the arithmetic shift right
operation will emit a combination of shr, mul and shl.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ default = ["capstone4"]
 thread_safe = []
 capstone4 = ["falcon_capstone/capstone4"]
 static = ["falcon_capstone/static"]
+il-expression-ashr = []
 
 [lib]
 name = "falcon"
