--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
           sudo make install
       - uses: actions-rs/toolchain@v1
         with:
-            toolchain: stable
+            toolchain: nightly-2021-07-27
             components: clippy
             override: true
       - run: rustup component add rustfmt
