--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
+bad64 = { version="0.4", features=["std"] }
 base64 = "0.13"
 bitflags = "1.2"
-falcon_capstone = "0.4.1"
+falcon_capstone = "0.5.0"
 error-chain = "0.12"
 goblin = "0.4"
 log = "0.4"
