--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,8 @@ goblin = "0.4"
 log = "0.4"
 num-bigint = {version="0.4", features=["serde"]}
 num-traits = "0.2"
-serde_derive = "1.0"
 serde_json = "1.0"
-serde = {version="1.0", features=["rc"]}
+serde = {version="1.0", features=["derive", "rc"]}
 rustc-hash = "1.1.0"
 
 
