--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "falcon"
-version = "0.5.4"
+version = "0.5.5"
 authors = [ "endeavor <endeavor@rainbowsandpwnies.com>" ]
 repository = "https://github.com/falconre/falcon"
 description = "A Binary Analysis Framework in Rust"
@@ -9,18 +9,17 @@ readme = "README.md"
 edition = "2021"
 
 [dependencies]
-bad64 = { version="0.5", features=["std"] }
-base64 = "0.13"
+bad64 = { version="0.6", features=["std"] }
+base64 = "0.21"
 bitflags = "1.2"
-falcon_capstone = "0.5.1"
-error-chain = "0.12"
-goblin = "0.4"
+falcon_capstone = "0.5.2"
+thiserror = "1"
+goblin = "0.6"
 log = "0.4"
 num-bigint = {version="0.4", features=["serde"]}
 num-traits = "0.2"
-serde_derive = "1.0"
 serde_json = "1.0"
-serde = {version="1.0", features=["rc"]}
+serde = {version="1.0", features=["derive", "rc"]}
 rustc-hash = "1.1.0"
 
 
